# warlock-rl

./: .gitattributes  .gitignore  README.md  bun.lockb  compress_logs.py  copy_latest_replay.py  frontend.sh  package.json  tsconfig.json
src/: index.ts  serve.ts
src/cli/: index.ts
src/common/: components.ts  ga_zpp.test.ts  ga_zpp.ts  index.ts  keyboard.ts  mathutils.ts
src/gameplay/: abilities.ts  arena.ts  index.ts  player.ts  projectile.ts  random.ts  team.ts
src/gameplay/components/: abilities.ts  actions.ts  arena.ts  body.ts  cooldown.ts  detectedcollisions.ts  gameevents.ts  gamestate.ts  health.ts  index.ts  lifetime.ts  order.ts  player.ts  playerowned.ts  projectile.ts  pull.ts  shield.ts  shop.ts  unit.ts
src/gameplay/systems/: ability.ts  bodycollision.ts  collision.ts  collisiondetection.ts  gravity.ts  homing.ts  index.ts  lava.ts  lifetime.ts  movement.ts  order.ts  physics.ts  projectilecollision.ts  regeneration.ts  round.ts  shoot.ts  shop.ts  team.ts
src/gameplay/systems/ability/: boomerang.ts  cluster.ts  definition.ts  gravity.ts  homing.ts  index.ts  lightning.ts  link.ts  scourge.ts  shield.ts  shoot.ts  swap.ts  teleport.ts
src/gameplay/utils/: abilities.ts  damage.ts  physics.ts  projectile.ts  random.ts  shop.ts  team.ts
src/render/: index.ts  state_history.json
src/render/widgets/: cooldown.ts  shop.ts
warlock_rl/: README.md  pyproject.toml
warlock_rl/tests/: test_env.py  test_game.py
warlock_rl/warlock_rl/: agent_league.py  envs.py  game.py  models.py  train.py
